protocols/tests/brave_new_world/bit_truncation/bit_truncation_sha_bug.out
error: The two expressions did not evaluate to the same value
  ┌─ brave_new_world/bit_truncation/bit_truncation_sha.prot:9:15
  │
9 │     assert_eq(data_out, dut.left);
  │               ^^^^^^^^^^^^^^^^^^ LHS Value: 68719476736, RHS Value: 0

Trace 0 failed: Assertion(EqualityFailed { expr1_id: expr2, expr2_id: expr3, value1: ValueOwned(000001000000000000000000000000000000000000), value2: ValueOwned(000000000000000000000000000000000000000000) })
Trace 0 execution failed.
